# api/openapi.json
@@ -1718,6 +1718,16 @@
             },
             "description": "OK"
           },
+          "400": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/restapi.ErrorResponse"
+                }
+              }
+            },
+            "description": "Invalid filter parameter"
+          },
           "401": {
             "content": {
               "application/json": {
